change the name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="col-xs-9">
         <div class="header-logo-mobile">
           <a href="index.html">
-            <p>Agnel <span>Caterers</span></p>
+            <p>Mohit <span>Caterers</span></p>
           </a>
         </div>
       </div>
