--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- Mobile Navbar Menu Section Ends -->
   <!-- Desktop Logo and Navbar Menu Section Starts -->
   <div class="container-fluid bg-logo-navbar-menu-desktop">
-    <div class="row">
+    <div class="row flex-align-center-desktop">
       <div class="col-sm-3 col-md-3 col-lg-3">
         <div class="header-logo-desktop">
           <a href="index.html">
