changes in menu

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
   <!-- Desktop Logo and Navbar Menu Section Starts -->
   <div class="container-fluid bg-logo-navbar-menu-desktop">
     <div class="row flex-align-center-desktop">
-      <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="col-sm-3 col-md-3 col-lg-2">
         <div class="header-logo-desktop">
           <a href="index.html">
             <p>Mohit <span>Caterers</span></p>
           </a>
         </div>
       </div>
-      <div class="col-sm-9 col-md-6 col-lg-6">
+      <div class="col-sm-9 col-md-9 col-lg-8">
         <ul class="menu-listing-desktop">
           <li class="active"><a href="#home">Home</a></li>
           <li><a href="#about">About Us</a></li>
@@ -82,7 +82,7 @@
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </div>
-      <div class="col-sm-0 col-md-3 col-lg-3">
+      <div class="col-sm-0 col-md-0 col-lg-2 padding-0-tab">
         <ul class="veg-non-veg-listing">
           <li><img src="images/veg.png" class="img-responsive" alt="" /></li>
           <li><img src="images/non-veg.png" class="img-responsive" alt="" /></li>
